# usub-adw

./: .gitignore  README.md  cu.axel.USub.json  cu.axel.usub.json  meson.build
.github/workflows/: build_flatpak.yml
data/: cu.axel.USub.appdata.xml.in  cu.axel.USub.desktop.in  cu.axel.USub.gschema.xml  cu.axel.usub.appdata.xml.in  cu.axel.usub.desktop.in  cu.axel.usub.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  style.css  usub.gresource.xml  usub.in  window.blp  window.cmb  window.py  window.ui
